Added Haining Wang to people.html

--- a/people/people.html
+++ b/people/people.html
@@ -187,7 +187,17 @@
         </div>
         <div id="Bio16" style="DISPLAY: none">
             <p class="bio">Shu Wan is currently a doctoral student in history at the University at Buffalo. He is passionate about digital humanities and its potential in providing a more inclusive and interactive research environment.</p>
-        </div>    	
+        </div>    
+    	
+  	
+        <div>
+          <div id="BioExpander17" style="DISPLAY: inline">
+            <a class="expandCollapse" title="View Bio" href="javascript:expandBio(17)">[+]</a>
+          </div> Data Analytics Editor: Haining Wang, Indiana University <br />
+        </div>
+        <div id="Bio17" style="DISPLAY: none">
+            <p class="bio">Haining Wang is a doctoral student in Information Science at Indiana University Bloomington. His research explores applications of natural language processing and large language models in the humanities and open science.</p>
+        </div>        	
       
  <!--    TEMPLATE for bios (the numeric portions in lines 161, 162, and 165 need to match)   
         <div>
