--- a/submissions/statistics.html
+++ b/submissions/statistics.html
@@ -85,6 +85,7 @@
 			<tr>
 				<th>DHQ Acceptance Counts</th>
 					<th>Total</th>
+					<th>2023</th>
 					<th>2022</th>
 					<th>2021</th>
 					<th>2020</th>
@@ -109,8 +110,9 @@
 			</tr>
 			<tr>
 				<td align="right">submissions</td> <!-- regular -->
-				<td>944</td> <!-- total -->
-				<td>100</td> <!-- 2022 -->
+				<td>1060</td> <!-- total -->
+				<td>115</td> <!-- 2023 -->
+				<td>101</td> <!-- 2022 -->
 				<td>102</td> <!-- 2021 -->
 				<td>92</td> <!-- 2020 -->
 				<td>78</td> <!-- 2019 -->
@@ -131,8 +133,9 @@
 			</tr>
 			<tr>
 				<td align="right">decisions</td> <!-- regular -->
-				<td>932</td> <!-- total -->
-				<td>94 (pending)</td> <!-- 2022 -->
+				<td>969</td> <!-- total -->
+				<td>103 (pending)</td> <!-- 2023 -->
+				<td>101</td> <!-- 2022 -->
 				<td>102</td>   <!-- 2021 -->
 				<td>92</td> <!-- 2020 -->
 				<td>78</td> <!-- 2019 -->
@@ -153,10 +156,11 @@
 			</tr>
 			<tr>
 				<td align="right">accepted</td> <!-- regular -->
-				<td>340</td> <!-- total -->
-				<td>23 (pending)</td> <!-- 2022 -->
+				<td>350</td> <!-- total -->
+				<td>14 (pending)</td> <!-- 2023 -->
+				<td>27</td> <!-- 2022 -->
 				<td>30</td>   <!-- 2021 -->
-				<td>27</td> <!-- 2020 -->
+				<td>28</td> <!-- 2020 -->
 				<td>28</td> <!-- 2019 -->
 				<td>32</td> <!-- 2018 -->
 				<td>26</td> <!-- 2017 -->
@@ -175,10 +179,11 @@
 			</tr>
 			<tr>
 				<td align="right">published</td> <!-- regular -->
-				<td>308</td> <!-- total -->
-				<td>11 (pending)</td> <!-- 2022 -->
-				<td>26 (pending)</td>   <!-- 2021 -->
-				<td>23 (pending)</td> <!-- 2020 -->
+				<td>329</td> <!-- total -->
+				<td>9 (pending)</td> <!-- 2023 -->
+				<td>23 (pending)</td> <!-- 2022 -->
+				<td>27 (pending)</td>   <!-- 2021 -->
+				<td>24 (pending)</td> <!-- 2020 -->
 				<td>24</td> <!-- 2019 -->
 				<td>30</td> <!-- 2018 -->
 				<td>22</td> <!-- 2017 -->
@@ -200,8 +205,9 @@
 			</tr>
 			<tr>
 				<td align="right">submissions</td> <!-- special -->
-				<td>358</td> <!-- total -->
-				<td>40</td> <!-- 2022 -->
+				<td>386</td> <!-- total -->
+				<td>29</td> <!-- 2023 -->
+				<td>39</td> <!-- 2022 -->
 				<td>31</td>   <!-- 2021 -->
 				<td>38</td> <!-- 2020 -->
 				<td>53</td> <!-- 2019 -->
@@ -222,8 +228,9 @@
 			</tr>
 			<tr>
 				<td align="right">decisions</td> <!-- special -->
-				<td>337</td> <!-- total -->
-				<td>26 (pending)</td> <!-- 2022 -->
+				<td>358</td> <!-- total -->
+				<td>13 (pending)</td> <!-- 2023 -->
+				<td>34 (pending)</td> <!-- 2022 -->
 				<td>24 (pending)</td>   <!-- 2021 -->
 				<td>38</td> <!-- 2020 -->
 				<td>53</td> <!-- 2019 -->
@@ -244,9 +251,10 @@
 			</tr>
 			<tr>
 				<td align="right">accepted</td> <!-- special -->
-				<td>288</td> <!-- total -->
-				<td>13</td> <!-- 2022 -->
-				<td>22 (pending)</td>   <!-- 2021 -->
+				<td>301</td> <!-- total -->
+				<td>6</td> <!-- 2023 -->
+				<td>20 (pending)</td> <!-- 2022 -->
+				<td>22</td>   <!-- 2021 -->
 				<td>36</td> <!-- 2020 -->
 				<td>50 </td> <!-- 2019 -->
 				<td>6</td> <!-- 2018 -->
@@ -266,9 +274,10 @@
 			</tr>
 			<tr>
 				<td align="right">published</td> <!-- special -->
-				<td>277</td> <!-- total -->
-				<td>8</td> <!-- 2022 -->
-				<td>22 (pending)</td>   <!-- 2021 -->
+				<td>289</td> <!-- total -->
+				<td>0</td> <!-- 2023 -->
+				<td>19 (pending)</td> <!-- 2022 -->
+				<td>22</td>   <!-- 2021 -->
 				<td>33</td> <!-- 2020 -->
 				<td>49</td> <!-- 2019 -->
 				<td>6</td> <!-- 2018 -->
@@ -291,7 +300,8 @@
 			</tr>
 			<tr>
 				<td align="right">submissions</td> <!-- all -->
-				<td>1302</td> <!-- total -->
+				<td>1446</td> <!-- total -->
+				<td>144</td> <!-- 2023 -->
 				<td>140</td> <!-- 2022 -->
 				<td>133</td>   <!-- 2021 -->
 				<td>130</td> <!-- 2020 -->
@@ -313,8 +323,9 @@
 			</tr>
 			<tr>
 				<td align="right">decisions</td> <!-- all -->
-				<td>1268</td> <!-- total -->
-				<td>120 (pending)</td> <!-- 2022 -->
+				<td>1407</td> <!-- total -->
+				<td>116 (pending)</td> <!-- 2023 -->
+				<td>135 (pending)</td> <!-- 2022 -->
 				<td>126 (pending)</td>   <!-- 2021 -->
 				<td>130</td> <!-- 2020 -->
 				<td>131</td> <!-- 2019 -->
@@ -335,10 +346,11 @@
 			</tr>
 			<tr>
 				<td align="right">accepted</td> <!-- all -->
-				<td>627</td> <!-- total -->
-				<td>36 (pending)</td> <!-- 2022 -->
+				<td>663</td> <!-- total -->
+				<td>20 (pending)</td> <!-- 2023 -->
+				<td>47 (pending)</td> <!-- 2022 -->
 				<td>52 (pending)</td>   <!-- 2021 -->
-				<td>63</td> <!-- 2020 -->
+				<td>64</td> <!-- 2020 -->
 				<td>78</td> <!-- 2019 -->
 				<td>38</td> <!-- 2018 -->
 				<td>44</td> <!-- 2017 -->
@@ -357,10 +369,11 @@
 			</tr>
 			<tr>
 				<td align="right">published</td> <!-- all -->
-				<td>585</td> <!-- total -->
-				<td>19 (pending)</td> <!-- 2022 -->
-				<td>48 (pending)</td>   <!-- 2021 -->
-				<td>56 (pending)</td> <!-- 2020 -->
+				<td>620</td> <!-- total -->
+				<td>9 (pending)</td> <!-- 2023 -->
+				<td>42 (pending)</td> <!-- 2022 -->
+				<td>49 (pending)</td>   <!-- 2021 -->
+				<td>57 (pending)</td> <!-- 2020 -->
 				<td>73</td> <!-- 2019 -->
 				<td>36</td> <!-- 2018 -->
 				<td>40</td> <!-- 2017 -->
@@ -384,6 +397,7 @@
 		<tr>
 			<th>DHQ Acceptance Rates</th>
 				<th>Total</th>
+				<th>2023</th>
 				<th>2022</th>
 				<th>2021</th>
 				<th>2020</th>
@@ -408,10 +422,11 @@
 		</tr>
 		<tr>
 			<td align="right">published/submitted</td> <!-- regular -->
-				<td>0.33</td> <!-- total -->
-				<td>0.11 (pending)</td>   <!-- 2022 -->
-				<td>0.25</td>   <!-- 2021 -->
-				<td>0.25</td> <!-- 2020 -->
+				<td>0.31</td> <!-- total -->
+				<td>0.08 (pending)</td>   <!-- 2023 -->
+				<td>0.30 (pending)</td>   <!-- 2022 -->
+				<td>0.37 (pending)</td>   <!-- 2021 -->
+				<td>0.26</td> <!-- 2020 -->
 				<td>0.31</td> <!-- 2019 -->
 				<td>0.33</td> <!-- 2018 -->
 				<td>0.27</td> <!-- 2017 -->
@@ -430,10 +445,11 @@
 		</tr>
 		<tr>
 			<td align="right">accepted/submitted</td> <!-- regular -->
-				<td>0.36</td> <!-- total -->
-				<td>0.23 (pending)</td>   <!-- 2022 -->
-				<td>0.29</td> <!-- 2021 -->
-				<td>0.29</td> <!-- 2020 -->
+				<td>0.34</td> <!-- total -->
+				<td>0.14 (pending)</td>   <!-- 2023 -->
+				<td>0.34 (pending)</td>   <!-- 2022 -->
+				<td>0.39 (pending)</td> <!-- 2021 -->
+				<td>0.30</td> <!-- 2020 -->
 				<td>0.36</td> <!-- 2019 -->
 				<td>0.34</td> <!-- 2018 -->
 				<td>0.31</td> <!-- 2017 -->
@@ -451,11 +467,12 @@
 				<td>0.33</td> <!-- 2005 -->
 		</tr>
 		<tr>
-			<td align="right">published/decisions</td>
-				<td>0.33</td> <!-- total -->
-				<td>0.11 (pending)</td>   <!-- 2022 -->
-				<td>0.25 (pending)</td>   <!-- 2021 -->
-				<td>0.25</td> <!-- 2020 -->
+			<td align="right">published/decisions</td> <!-- regular -->
+				<td>0.32</td> <!-- total -->
+				<td>0.08 (pending)</td>   <!-- 2023 -->
+				<td>0.31 (pending)</td>   <!-- 2022 -->
+				<td>0.39 (pending)</td>   <!-- 2021 -->
+				<td>0.26</td> <!-- 2020 -->
 				<td>0.31</td> <!-- 2019 -->
 				<td>0.32</td> <!-- 2018 -->
 				<td>0.27</td> <!-- 2017 -->
@@ -476,9 +493,10 @@
 			<td colspan="14"><strong>Special issue statistics</strong></td>
 		</tr>
 		<tr>
-			<td align="right">published/submitted</td>
-				<td>0.77</td> <!-- total -->
-				<td>0.20 (pending)</td>   <!-- 2022 -->
+			<td align="right">published/submitted</td> <!-- special -->
+				<td>0.75</td> <!-- total -->
+				<td>0.00 (pending)</td>   <!-- 2023 -->
+				<td>0.49 (pending)</td>   <!-- 2022 -->
 				<td>0.71 (pending)</td>   <!-- 2021 -->
 				<td>0.87</td> <!-- 2020 -->
 				<td>0.92</td> <!-- 2019 -->
@@ -498,9 +516,10 @@
 			<td>NA</td> <!-- 2005 -->
 		</tr>
 		<tr>
-			<td align="right">accepted/submitted</td>
-				<td>0.80</td> <!-- total -->
-				<td>0.33 (pending)</td>   <!-- 2022 -->
+			<td align="right">accepted/submitted</td> <!-- special -->
+				<td>0.78</td> <!-- total -->
+				<td>0.21 (pending)</td>   <!-- 2023 -->
+				<td>0.51 (pending)</td>   <!-- 2022 -->
 				<td>0.71 (pending)</td>   <!-- 2021 -->
 				<td>0.95</td> <!-- 2020 -->
 				<td>0.94</td> <!-- 2019 -->
@@ -520,9 +539,10 @@
 			<td>NA</td> <!-- 2005 -->
 		</tr>
 		<tr>
-			<td align="right">published/decisions</td>
-				<td>0.82</td> <!-- total -->
-				<td>0.31 (pending)</td>   <!-- 2022 -->
+			<td align="right">published/decisions</td> <!-- special -->
+				<td>0.81</td> <!-- total -->
+				<td>0.00 (pending)</td>   <!-- 2023 -->
+				<td>0.56 (pending)</td>   <!-- 2022 -->
 				<td>0.92 (pending)</td>   <!-- 2021 -->
 				<td>0.87</td> <!-- 2020 -->
 				<td>0.92</td> <!-- 2019 -->
@@ -545,7 +565,7 @@
 	</table>
 
 
-<p>Last updated: July 5, 2023</p>
+<p>Last updated: June 30, 2024</p>
 
     </body>
 </html>
