updated language for review submissions
removed references to email submissions and directed readers to the standard submission page to help prevent conflicting information in the future

--- a/submissions/reviews.html
+++ b/submissions/reviews.html
@@ -37,6 +37,6 @@ While these are not at all intended to be prescriptive examples, the following a
         <h2>
         How To Submit</h2>
         <p>
-Reviewers are encouraged to follow the text style guidelines specified for DHQ, noting in particular the treatment for references to the material being reviewed. Reviews can be submitted via email as specified under Submission logistics for DHQ, noting that the submission is a review.</p>
+Reviewers are encouraged to follow the style and citation guidelines specified for DHQ, noting in particular the treatment for references to the material being reviewed. Reviews can be submitted in the process described on our <a href="index.html">Submission Guidelines</a> page. Review submissions may be evaluated on a different schedule than article submissions; please contact us if you are a prospective reviewer and have questions.<!--Reviews can be submitted via email as specified under Submission logistics for DHQ, noting that the submission is a review-->.</p>
     </body>
 </html>
