--- a/data/uvepss/search.html
+++ b/data/uvepss/search.html
@@ -7,6 +7,6 @@
     <body>
       <p>pre-search stuff …</p>
       <div id="staticSearch"/>
-      <p>… post-search stuff.</p>
+      <!-- <p>… post-search stuff.</p> -->
     </body>
 </html>
