updating FAQ and About pages

--- a/about/faq.html
+++ b/about/faq.html
@@ -26,7 +26,7 @@
 				page</a>.</p>
 		<p>DHQ does not generally publish the following without substantial revision:</p>
 		<ul>
-			<li>routine applications of well-established DH tools: these would be worth submitting
+			<li>routine applications of well-established DH tools, or routine analyses of data sets or text corpora: these would be worth submitting
 				to your own disciplinary journals</li>
 			<li>conference papers; these typically need to be substantially revised to provide more
 				critical context and argumentative substance </li>
@@ -36,6 +36,7 @@
 			<li>standalone data sets: we welcome data sets that accompany a publication </li>
 			<li>annotated bibliographies: we welcome annotated bibliographies when they accompany a
 				publication</li>
+			<li>bibliometric studies: these typically need to be substantially revised to provide more critical context and argumentative substance</li>
 		</ul>
 		<p>We are working to develop a mentoring program to support potential authors in framing
 			their work for submission to DHQ. In the meantime, we are happy to provide feedback on
@@ -46,6 +47,8 @@
 			interdisciplinary fields of inquiry that encompass digital humanities theories,
 			scholarship, practices and collaborations. The journal assumes some familiarity with the
 			digital humanities, but not specialist knowledge of any particular domains. </p>
+		<h2>Does DHQ charge any publication fees or processing charges?</h2>
+		<p>No, DHQ does not charge fees of any kind to authors or readers.</p>
 		<h2>What support does DHQ offer to potential authors new to the field?</h2>
 		<p> DHQ’s staff can help the author improve the writing and argumentation, please <a
 				href="mailto:dhqinfo@digitalhumanities.org">contact us</a>. We are also working to
