Cosmetic fixes to search interface

--- a/data/uvepss/search.html
+++ b/data/uvepss/search.html
@@ -5,7 +5,7 @@
         <title>Test search</title>
     </head>
     <body>
-      <p>pre-search stuff …</p>
+      <h1>Search</h1>
       <div id="staticSearch"/>
       <!-- <p>… post-search stuff.</p> -->
     </body>
