--- a/people/people.html
+++ b/people/people.html
@@ -20,17 +20,16 @@
                 materiality, and various practical problems in text encoding. She has served as President and Vice
                 President of ACH and Chair of the Text Encoding Initiative Consortium.</p>
      </div>
-
+<!-- 
      <div>
         <div id="BioExpander2" style="DISPLAY: inline">
             <a class="expandCollapse" title="View Bio" href="javascript:expandBio(2)">[+]</a>
-        </div>General Editor: Emily Edwards, St. Francis College<br />
+        </div>General Editor: NAME<br />
      </div>
      <div id="Bio2" style="DISPLAY: none">
-            <p class="bio">Emily Edwards is an Assistant Professor of Digital Humanities and Educational Technologist at St. Francis College in Brooklyn, NY. Dr. Edwards currently serves as co-director of the grant Digital Humanities Across the Curriculum (DHAC), funded by the National Endowment for the Humanities (NEH). Her research focuses on the intersection of digital media, technologies, and platforms, and race, gender, and immigration in global contexts. Her work has appeared in journals such as <em>New Media &amp; Society</em>, <em>Critical Studies in Media Communication</em>, and <em>Glocalism: Journal of culture, politics and innovation</em>.
-</p>    
+            <p class="bio"></p>    
      </div>
-
+ -->
       <div>
         <div id="BioExpander3" style="DISPLAY: inline">
             <a class="expandCollapse" title="View Bio" href="javascript:expandBio(3)">[+]</a>
@@ -144,10 +143,10 @@
 <!--         <div>
           <div id="BioExpander13" style="DISPLAY: inline">
             <a class="expandCollapse" title="View Bio" href="javascript:expandBio(13)">[+]</a>
-          </div> Languages Editor: Mary Katherine Newman<br />
+          </div> ROLE: NAME<br />
         </div>
         <div id="Bio13" style="DISPLAY: none">
-            <p class="bio">Mary Katherine Newman is a DPhil student in Medieval and Modern Languages (Spanish) at the University of Oxford. Her work focuses on the five senses in accounts of the “conquest” of Chile. She is also interested in using digital humanities to highlight marginalised voices, in particular of Indigenous women, in the Spanish American canon. </p>
+            <p class="bio"> </p>
         </div>
 -->
        <div>
@@ -284,6 +283,7 @@
         <ul>
 			<li>Chuck Burd, Associate Technical Editor</li>
             <li>Michelle Dalmau, Usability Editor</li>
+        	<li>Emily Edwards, General Editor</li>
         	<li>Anke Finger, Peer Reviews Editor</li>
         	<li>Alex Gil, Internationalization Editor</li>
         	<li>Robin Hershkowitz, Indexing and Metadata Editor</li>
