--- a/submissions/index.html
+++ b/submissions/index.html
@@ -38,7 +38,7 @@
         </ul>
         
         <h2 id="logistics">Submitting an Article</h2>
-       <p><em><a href="https://openjournals.library.northeastern.edu/dhq/home">Submit an article</a></em></p>
+       <p><em><a href="http://openjournals.neu.edu/ojs/dhq">Submit an article</a></em></p>
        <p>DHQ invites submissions at rolling three-month intervals with deadlines on January 15, April 15, July 15, and October 15. 
            
            <!-- 
