Updated acceptance statistics for 2024

--- a/submissions/statistics.html
+++ b/submissions/statistics.html
@@ -60,6 +60,7 @@
         <p>DHQ is indexed in the Clarivate Analytics Emerging Sources Citation Index, which means that DHQ is indexed within Thomson Reuters' Web of Science.</p>
     	<p>DHQ has a Clarivate Analytics Journal Impact Factor. Historical data for this metric is as follows:</p>
     	<ul>
+    		<li>2024: 0.8</li>
     		<li>2023: 0.5</li>
     		<li>2022: 0.4</li>
     	</ul>
@@ -75,14 +76,14 @@
           <li><strong>Changes over time:</strong> DHQ is an experimental journal, and our policies and practices have evolved to some degree over time. In particular, DHQ's submission management system changed in 2014, with some alterations to our data collection. We have done our best to harmonize the data across DHQ's publication history, but comparisons between years may not be fully meaningful.</li>
        	<li><strong>Variation between years:</strong> Because DHQ's acceptance rates vary significantly from year to year (particularly in the earlier period of the journal's publication), and because our review and production cycles cross yearly boundaries, the acceptance rate for any single year is not fully indicative of the competitiveness for articles published in that year. We recommend using a three-year rolling average.</li>
           <li><strong>Special issues:</strong> Submissions for special issues receive two forms of peer review. Submissions are typically reviewed first by the issue's guest editor(s) who may reject or request revisions before submitting the issue to DHQ. DHQ also reviews all special issue submissions following our normal peer review process, and articles may be rejected or revisions may be required. However, because of the prior review, acceptance rates are significantly higher for special issues than for regular submissions. For this reason, we provide separate acceptance rate statistics for special and regular issue submissions. Our acceptance rates for regular issues may be a useful index of quality standards for special issue submissions, but for some purposes it may be more appropriate to think of special issue contributions as being similar in some respects to a book chapter, with respect to the process and outcomes of peer review. </li>
-          <li><strong>Currency:</strong> We provide basic statistics (year by year and cumulative) on submissions, decisions, acceptances, and publications. For the most recent years, where not all articles have completed the review and production process, statistics are necessarily incomplete. In these cases, the ratio of published articles to decisions is the most useful. We provide the date on which the statistics were last updated to assist in making this assessment. This data is maintained under version control, so if access to past versions is needed for historical purposes we can provide it. Occasionally, we may discover errors in historical data which will be updated and may change the overall statistics, but the effects of such individual cases will be very small.</li>
+          <li><strong>Currency:</strong> We provide basic statistics (year by year and cumulative) on submissions, decisions, acceptances, and publications. For the most recent years, where not all articles have completed the review and production process, or where publication of an accepted article may be delayed by the author failing to complete final revisions, statistics are necessarily incomplete. In these cases, the ratio of published articles to decisions is the most useful. We provide the date on which the statistics were last updated to assist in making this assessment. This data is maintained under version control, so if access to past versions is needed for historical purposes we can provide it. Occasionally, we may discover errors in historical data which will be updated and may change the overall statistics, but the effects of such individual cases will be very small.</li>
           <li><strong>Genres:</strong> DHQ publishes a range of genres. Articles and case studies receive external peer review, and these are the only materials covered in the statistics reported below. Other materials, including editorials and opinion pieces, reviews, and occasional special materials associated with a specific event or special issues, are reviewed by the DHQ editorial team with input as needed from advisors and external reviewers. These materials are excluded from the statistics below.</li>
           <li><strong>Handling of resubmissions:</strong> Submissions whose decision is "resubmit for review" (that is, submissions requiring such significant revisions that further review is necessary before a final decision can be made) are considered to have been rejected. If such an article is subsequently resubmitted in revised form, that is considered as a fresh submission.</li>
        </ol>
  <p>The terms used in the statistics below are defined as follows:</p>
 <ul>
           <li><strong>submission:</strong> An article or case study is reported as a submission if it is received by DHQ through our regular submission process with the intention that it be considered for publication. This does not include drafts submitted informally for feedback, but does include materials that are subsequently withdrawn.</li>
-          <li><strong>acceptance:</strong> A submission is reported as accepted if it is either accepted for publication as is, or accepted with minor revisions. This includes submissions whose decision is "revise," even if the revisions are never completed and the article is never published. It also includes articles that were accepted even if they were subsequently withdrawn. Articles whose acceptance is contingent on making revisions, but whose authors decline to make those revisions, are considered to have been declined.</li>
+          <li><strong>acceptance:</strong> A submission is reported as accepted if it is either accepted for publication as is, or accepted with minor revisions. This includes submissions whose decision is "revise," even if the revisions are never completed and the article is never published. It also includes articles that were accepted even if they were subsequently withdrawn. Articles whose acceptance is contingent on making revisions, but whose authors fail to make those revisions, are considered to have been declined.</li>
           <li><strong>decision:</strong> A submission is reported as a decision if a review decision was made, regardless of whether the article has been published.</li>
           <li><strong>publication:</strong> A submission is reported as published if it has appeared on the DHQ's public site (either in the Preview area or as part of a completed issue). This includes materials that may subsequently have been removed for some reason (either arising from a DHQ decision or at the author's request).</li>
 
@@ -93,6 +94,7 @@
 			<tr>
 				<th>DHQ Acceptance Counts</th>
 					<th>Total</th>
+					<th>2024</th>
 					<th>2023</th>
 					<th>2022</th>
 					<th>2021</th>
@@ -118,7 +120,8 @@
 			</tr>
 			<tr>
 				<td align="right">submissions</td> <!-- regular -->
-				<td>1060</td> <!-- total -->
+				<td>1265</td> <!-- total -->
+				<td>205</td> <!-- 2024 -->
 				<td>115</td> <!-- 2023 -->
 				<td>101</td> <!-- 2022 -->
 				<td>102</td> <!-- 2021 -->
@@ -141,8 +144,9 @@
 			</tr>
 			<tr>
 				<td align="right">decisions</td> <!-- regular -->
-				<td>969</td> <!-- total -->
-				<td>103 (pending)</td> <!-- 2023 -->
+				<td>1238</td> <!-- total -->
+				<td>168 (pending)</td> <!-- 2024 -->
+				<td>115</td> <!-- 2023 -->
 				<td>101</td> <!-- 2022 -->
 				<td>102</td>   <!-- 2021 -->
 				<td>92</td> <!-- 2020 -->
@@ -164,12 +168,13 @@
 			</tr>
 			<tr>
 				<td align="right">accepted</td> <!-- regular -->
-				<td>350</td> <!-- total -->
-				<td>14 (pending)</td> <!-- 2023 -->
-				<td>27</td> <!-- 2022 -->
-				<td>30</td>   <!-- 2021 -->
-				<td>28</td> <!-- 2020 -->
-				<td>28</td> <!-- 2019 -->
+				<td>378</td> <!-- total -->
+				<td>24 (pending)</td> <!-- 2024 -->
+				<td>21</td> <!-- 2023 -->
+				<td>26</td> <!-- 2022 -->
+				<td>28</td>   <!-- 2021 -->
+				<td>24</td> <!-- 2020 -->
+				<td>25</td> <!-- 2019 -->
 				<td>32</td> <!-- 2018 -->
 				<td>26</td> <!-- 2017 -->
 				<td>38</td> <!-- 2016 -->
@@ -187,11 +192,12 @@
 			</tr>
 			<tr>
 				<td align="right">published</td> <!-- regular -->
-				<td>329</td> <!-- total -->
-				<td>9 (pending)</td> <!-- 2023 -->
-				<td>23 (pending)</td> <!-- 2022 -->
+				<td>355</td> <!-- total -->
+				<td>13 (pending)</td> <!-- 2024 -->
+				<td>17 (pending)</td> <!-- 2023 -->
+				<td>26</td> <!-- 2022 -->
 				<td>27 (pending)</td>   <!-- 2021 -->
-				<td>24 (pending)</td> <!-- 2020 -->
+				<td>24</td> <!-- 2020 -->
 				<td>24</td> <!-- 2019 -->
 				<td>30</td> <!-- 2018 -->
 				<td>22</td> <!-- 2017 -->
@@ -213,10 +219,11 @@
 			</tr>
 			<tr>
 				<td align="right">submissions</td> <!-- special -->
-				<td>386</td> <!-- total -->
+				<td>404</td> <!-- total -->
+				<td>19</td> <!-- 2024 -->
 				<td>29</td> <!-- 2023 -->
 				<td>39</td> <!-- 2022 -->
-				<td>31</td>   <!-- 2021 -->
+				<td>30</td>   <!-- 2021 -->
 				<td>38</td> <!-- 2020 -->
 				<td>53</td> <!-- 2019 -->
 				<td>9</td> <!-- 2018 -->
@@ -236,10 +243,11 @@
 			</tr>
 			<tr>
 				<td align="right">decisions</td> <!-- special -->
-				<td>358</td> <!-- total -->
-				<td>13 (pending)</td> <!-- 2023 -->
-				<td>34 (pending)</td> <!-- 2022 -->
-				<td>24 (pending)</td>   <!-- 2021 -->
+				<td>389</td> <!-- total -->
+				<td>4 (pending)</td> <!-- 2024 -->
+				<td>29</td> <!-- 2023 -->
+				<td>39</td> <!-- 2022 -->
+				<td>30</td>   <!-- 2021 -->
 				<td>38</td> <!-- 2020 -->
 				<td>53</td> <!-- 2019 -->
 				<td>9</td> <!-- 2018 -->
@@ -259,10 +267,11 @@
 			</tr>
 			<tr>
 				<td align="right">accepted</td> <!-- special -->
-				<td>301</td> <!-- total -->
-				<td>6</td> <!-- 2023 -->
-				<td>20 (pending)</td> <!-- 2022 -->
-				<td>22</td>   <!-- 2021 -->
+				<td>322</td> <!-- total -->
+				<td>2 (pending)</td> <!-- 2024 -->
+				<td>17</td> <!-- 2023 -->
+				<td>24</td> <!-- 2022 -->
+				<td>26</td>   <!-- 2021 -->
 				<td>36</td> <!-- 2020 -->
 				<td>50 </td> <!-- 2019 -->
 				<td>6</td> <!-- 2018 -->
@@ -282,12 +291,13 @@
 			</tr>
 			<tr>
 				<td align="right">published</td> <!-- special -->
-				<td>289</td> <!-- total -->
-				<td>0</td> <!-- 2023 -->
-				<td>19 (pending)</td> <!-- 2022 -->
-				<td>22</td>   <!-- 2021 -->
+				<td>309</td> <!-- total -->
+				<td>2 (pending)</td> <!-- 2024 -->
+				<td>16 (pending)</td> <!-- 2023 -->
+				<td>20 (pending)</td> <!-- 2022 -->
+				<td>23 (pending)</td>   <!-- 2021 -->
 				<td>33</td> <!-- 2020 -->
-				<td>49</td> <!-- 2019 -->
+				<td>50</td> <!-- 2019 -->
 				<td>6</td> <!-- 2018 -->
 				<td>18</td> <!-- 2017 -->
 				<td>41</td> <!-- 2016 -->
@@ -308,10 +318,11 @@
 			</tr>
 			<tr>
 				<td align="right">submissions</td> <!-- all -->
-				<td>1446</td> <!-- total -->
+				<td>1669</td> <!-- total -->
+				<td>224</td> <!-- 2024 -->
 				<td>144</td> <!-- 2023 -->
 				<td>140</td> <!-- 2022 -->
-				<td>133</td>   <!-- 2021 -->
+				<td>132</td>   <!-- 2021 -->
 				<td>130</td> <!-- 2020 -->
 				<td>131</td> <!-- 2019 -->
 				<td>102</td> <!-- 2018 -->
@@ -331,10 +342,11 @@
 			</tr>
 			<tr>
 				<td align="right">decisions</td> <!-- all -->
-				<td>1407</td> <!-- total -->
-				<td>116 (pending)</td> <!-- 2023 -->
-				<td>135 (pending)</td> <!-- 2022 -->
-				<td>126 (pending)</td>   <!-- 2021 -->
+				<td>1627</td> <!-- total -->
+				<td>172 (pending)</td> <!-- 2024 -->
+				<td>144</td> <!-- 2023 -->
+				<td>140</td> <!-- 2022 -->
+				<td>132</td>   <!-- 2021 -->
 				<td>130</td> <!-- 2020 -->
 				<td>131</td> <!-- 2019 -->
 				<td>102</td> <!-- 2018 -->
@@ -354,12 +366,13 @@
 			</tr>
 			<tr>
 				<td align="right">accepted</td> <!-- all -->
-				<td>663</td> <!-- total -->
-				<td>20 (pending)</td> <!-- 2023 -->
-				<td>47 (pending)</td> <!-- 2022 -->
-				<td>52 (pending)</td>   <!-- 2021 -->
-				<td>64</td> <!-- 2020 -->
-				<td>78</td> <!-- 2019 -->
+				<td>700</td> <!-- total -->
+				<td>26 (pending)</td> <!-- 2024 -->
+				<td>38</td> <!-- 2023 -->
+				<td>50</td> <!-- 2022 -->
+				<td>54</td>   <!-- 2021 -->
+				<td>60</td> <!-- 2020 -->
+				<td>75</td> <!-- 2019 -->
 				<td>38</td> <!-- 2018 -->
 				<td>44</td> <!-- 2017 -->
 				<td>80</td> <!-- 2016 -->
@@ -377,12 +390,13 @@
 			</tr>
 			<tr>
 				<td align="right">published</td> <!-- all -->
-				<td>620</td> <!-- total -->
-				<td>9 (pending)</td> <!-- 2023 -->
-				<td>42 (pending)</td> <!-- 2022 -->
-				<td>49 (pending)</td>   <!-- 2021 -->
-				<td>57 (pending)</td> <!-- 2020 -->
-				<td>73</td> <!-- 2019 -->
+				<td>664</td> <!-- total -->
+				<td>15 (pending)</td> <!-- 2024 -->
+				<td>33 (pending)</td> <!-- 2023 -->
+				<td>46 (pending)</td> <!-- 2022 -->
+				<td>50 (pending)</td>   <!-- 2021 -->
+				<td>57</td> <!-- 2020 -->
+				<td>74</td> <!-- 2019 -->
 				<td>36</td> <!-- 2018 -->
 				<td>40</td> <!-- 2017 -->
 				<td>77</td> <!-- 2016 -->
@@ -405,6 +419,7 @@
 		<tr>
 			<th>DHQ Acceptance Rates</th>
 				<th>Total</th>
+				<th>2024</th>
 				<th>2023</th>
 				<th>2022</th>
 				<th>2021</th>
@@ -430,10 +445,11 @@
 		</tr>
 		<tr>
 			<td align="right">published/submitted</td> <!-- regular -->
-				<td>0.31</td> <!-- total -->
-				<td>0.08 (pending)</td>   <!-- 2023 -->
-				<td>0.30 (pending)</td>   <!-- 2022 -->
-				<td>0.37 (pending)</td>   <!-- 2021 -->
+				<td>0.28</td> <!-- total -->
+				<td>0.06 (pending)</td>   <!-- 2024 -->
+				<td>0.15 (pending)</td>   <!-- 2023 -->
+				<td>0.26</td>   <!-- 2022 -->
+				<td>0.26</td>   <!-- 2021 -->
 				<td>0.26</td> <!-- 2020 -->
 				<td>0.31</td> <!-- 2019 -->
 				<td>0.33</td> <!-- 2018 -->
@@ -453,10 +469,11 @@
 		</tr>
 		<tr>
 			<td align="right">accepted/submitted</td> <!-- regular -->
-				<td>0.34</td> <!-- total -->
-				<td>0.14 (pending)</td>   <!-- 2023 -->
-				<td>0.34 (pending)</td>   <!-- 2022 -->
-				<td>0.39 (pending)</td> <!-- 2021 -->
+				<td>0.30</td> <!-- total -->
+				<td>0.12 (pending)</td>   <!-- 2024 -->
+				<td>0.18 (pending)</td>   <!-- 2023 -->
+				<td>0.26 (pending)</td>   <!-- 2022 -->
+				<td>0.27 (pending)</td> <!-- 2021 -->
 				<td>0.30</td> <!-- 2020 -->
 				<td>0.36</td> <!-- 2019 -->
 				<td>0.34</td> <!-- 2018 -->
@@ -476,10 +493,11 @@
 		</tr>
 		<tr>
 			<td align="right">published/decisions</td> <!-- regular -->
-				<td>0.32</td> <!-- total -->
-				<td>0.08 (pending)</td>   <!-- 2023 -->
-				<td>0.31 (pending)</td>   <!-- 2022 -->
-				<td>0.39 (pending)</td>   <!-- 2021 -->
+				<td>0.29</td> <!-- total -->
+				<td>0.08 (pending)</td>   <!-- 2024 -->
+				<td>0.15 (pending)</td>   <!-- 2023 -->
+				<td>0.26</td>   <!-- 2022 -->
+				<td>0.26</td>   <!-- 2021 -->
 				<td>0.26</td> <!-- 2020 -->
 				<td>0.31</td> <!-- 2019 -->
 				<td>0.32</td> <!-- 2018 -->
@@ -502,10 +520,11 @@
 		</tr>
 		<tr>
 			<td align="right">published/submitted</td> <!-- special -->
-				<td>0.75</td> <!-- total -->
-				<td>0.00 (pending)</td>   <!-- 2023 -->
-				<td>0.49 (pending)</td>   <!-- 2022 -->
-				<td>0.71 (pending)</td>   <!-- 2021 -->
+				<td>0.76</td> <!-- total -->
+				<td>0.11 (pending)</td>   <!-- 2024 -->
+				<td>0.55 (pending)</td>   <!-- 2023 -->
+				<td>0.51 (pending)</td>   <!-- 2022 -->
+				<td>0.77 (pending)</td>   <!-- 2021 -->
 				<td>0.87</td> <!-- 2020 -->
 				<td>0.92</td> <!-- 2019 -->
 				<td>0.67</td> <!-- 2018 -->
@@ -525,10 +544,11 @@
 		</tr>
 		<tr>
 			<td align="right">accepted/submitted</td> <!-- special -->
-				<td>0.78</td> <!-- total -->
-				<td>0.21 (pending)</td>   <!-- 2023 -->
-				<td>0.51 (pending)</td>   <!-- 2022 -->
-				<td>0.71 (pending)</td>   <!-- 2021 -->
+				<td>0.80</td> <!-- total -->
+				<td>0.11 (pending)</td>   <!-- 2024 -->
+				<td>0.59 (pending)</td>   <!-- 2023 -->
+				<td>0.62 (pending)</td>   <!-- 2022 -->
+				<td>0.87 (pending)</td>   <!-- 2021 -->
 				<td>0.95</td> <!-- 2020 -->
 				<td>0.94</td> <!-- 2019 -->
 				<td>0.67</td> <!-- 2018 -->
@@ -548,10 +568,11 @@
 		</tr>
 		<tr>
 			<td align="right">published/decisions</td> <!-- special -->
-				<td>0.81</td> <!-- total -->
-				<td>0.00 (pending)</td>   <!-- 2023 -->
-				<td>0.56 (pending)</td>   <!-- 2022 -->
-				<td>0.92 (pending)</td>   <!-- 2021 -->
+				<td>0.79</td> <!-- total -->
+				<td>0.50 (pending)</td>   <!-- 2024 -->
+				<td>0.55 (pending)</td>   <!-- 2023 -->
+				<td>0.51 (pending)</td>   <!-- 2022 -->
+				<td>0.77 (pending)</td>   <!-- 2021 -->
 				<td>0.87</td> <!-- 2020 -->
 				<td>0.92</td> <!-- 2019 -->
 				<td>0.67</td> <!-- 2018 -->
